--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,21 @@
 <!doctype HTML>
 <html>
+    <meta charset="utf-8"></meta>
+
+    <head>
+        <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+        <title>My Website</title>
+    </head>
+
+    <body>
+        <div><a href={{ url_for('kitty') }}><img src="static/tacocat.bmp" alt="TacocaT"></a>
+        <div><h1> HELLO WORLD </h1></div>
+        <table>
+            <tr>
+                <th> </th>
+                <td> </td>
+            </tr>
+        </table>
+    </body>
 
 </html>
