--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
-.catbanner{
-  background: white url('images/sleepykitty.JPG') no-repeat left;
+.hero-image{
+  background-image: url("static/cutechonk.jpg")
+  background-position: center; background-repeat: no-repeat; background-size: cover; position: relative;
+}
+
+.hero-text{
+  text-align: center; position: absolute; top: 50%; left: 50%; color: white;
 }
