--- a/templates/style.css
+++ b/templates/style.css
@@ -1,4 +1,43 @@
-.hero-image{
+.page-container {
+  margin: 5% 15%;
+  border: double;
+}
+
+.body-container {
+  padding: 15px;
+  border: solid 10px;
+}
+
+.nav-container {
+  background-color: 
+}
+
+img .nav-icon {
+  float
+  height: 50px;
+  width: 50px;
+  border-left: solid 5px;
+}
+
+.banner-container {
+  border: solid 2px;
+}
+
+.banner-txt {
+  padding: 5px 15px;
+  font-size: 30px;
+  font-family:
+  font-color:
+}
+
+img. banner {
+  
+}
+
+
+
+
+/* .hero-image{
   background-image: url("static/cutechonk.jpg")
   background-position: center; background-repeat: no-repeat; background-size: cover; position: relative;
 }
@@ -6,3 +45,4 @@
 .hero-text{
   text-align: center; position: absolute; top: 50%; left: 50%; color: white;
 }
+ */
