added home page link to house icon on nav bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
         <div class="banner-txt"> HELLO AND WELCOME !</div>
       </header>
       <div #firstnav class="nav-container">
-        <img class="nav-icon" src={{ url_for('static', filename='images/house.bmp')}}>
+        <a href="/"><img class="nav-icon" src={{ url_for('static', filename='images/house.bmp')}}></a>
         <img class="nav-icon" src={{ url_for('static', filename='images/tacocat.bmp')}}>
         <img class="nav-icon" src="" alt="">
         <img class="nav-icon" src="" alt="">
