--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -1,7 +1,20 @@
 {% extends from "base.html" %}
+{% block content %}
 
-<p>Here you will find a casual overview of who I am. If you are interested in my programming projects, click here to browse my modest portfolio.</p>
+<p>Here you will find a casual overview of who I am. If you are interested in my programming projects, <a href="">here is my Github.</a></p>
 
+
+
+
+
+<h2>Languages and Applications</h2>
+<ul><li>Python</li>
+  <li>HTML/CSS</li>
+  <li>GIT, Github</li>
+  <li>ATOM</li>
+  <li>Microsoft Word, Excel</li>
+  <li>Adobe Acrobat</li>
+</ul>
 
 <h2>My Interests</h2>
 <ul><li>Music and Instruments</li>
@@ -14,3 +27,6 @@
   <li>Coding</li>
   <p>I have taken great interest in programming this past year since realizing that its applications are endless. Its utility stretches to my other hobbies and beyond. At times it does seem overwhelming how many languages and different uses there are, but this feeds into the feeling of wanting to know how all the once-unnoticed technology everywhere around me works -- and how I can make it work better for my purposes.</p>
 </ul>
+
+
+{% endblock %}
