--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -1,11 +1,10 @@
 {% extends from "base.html" %}
 {% block content %}
 
-<p>Here you will find a casual overview of who I am. If you are interested in my programming projects, <a href="">here is my Github.</a></p>
+<p>Here you will find a casual overview of who I am. If you are interested in my programming projects, <a href="www.github.maryjng">here is my Github.</a></p>
 
-
-
-
+<p>Hello. I am an aspiring programmer currently working in immigration law. I first picked up programming through Python, teaching myself through online courses, a lot of research, and writing my own code. It was quite difficult at first for someone with no prior experience and from a background in political science and the legal field. Eventually, I built myself a foundation in programming and have since expanded to learning HTML/CSS and Flask. It is amazing what computers can do. I would like to learn as much programming as I can. </p>
+<p>Having studied political science in New York University and worked in the legal field, I have a lot of experience in writing, analysis, and communication. I also have developed soft skills from working, meaning I am no newbie to communication and interaction with others.</p>
 
 <h2>Languages and Applications</h2>
 <ul><li>Python</li>
