added aboutme page, started kitty page, added a link to aboutme on index (which broke the text alignment in the first box.. FIX THIS)

--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -1,4 +1,4 @@
-{% extends from "base.html" %}
+{% extends "base.html" %}
 {% block content %}
 
 <p>Here you will find a casual overview of who I am. If you are interested in my programming projects, <a href="www.github.maryjng">here is my Github.</a></p>
