--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -24,7 +24,7 @@
   <p>I enjoy playing Role Playing Games(RPG) video games with others online. We often engage in party play where we need to work together and communicate, sometimes against other players in guild sieges, free-for-all boss hunting, and in instanced dungeons. </p>
   <p>In some RPG games with more complex skill and ability systems, I do some theorycrafting on my own or with others. We plan out and test effective builds for our characters, sometimes using simulator tools to calculate accurate stat points. I follow a similar process in sandbox games to optimize and automate farming of desirable items, typically by manipulating game mechanics and AI.</p>
   <li>Coding</li>
-  <p>I have taken great interest in programming this past year since realizing that its applications are endless. Its utility stretches to my other hobbies and beyond. At times it does seem overwhelming how many languages and different uses there are, but this feeds into the feeling of wanting to know how all the once-unnoticed technology everywhere around me works -- and how I can make it work better for my purposes.</p>
+  <p>I have taken great interest in programming this past year since realizing that its applications are endless. It's utility stretches to my other hobbies and beyond. At times it does seem overwhelming how many languages and different uses there are, but this feeds into the feeling of wanting to know how all the once-unnoticed technology everywhere around me works -- and how I can make it work better for my purposes.</p>
 </ul>
 
 
